--- a/app/src/main/res/layout/activity_resultscreen.xml
+++ b/app/src/main/res/layout/activity_resultscreen.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:text="@string/resultTitle"
+        android:textColor="@android:color/black"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,6 +25,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="150dp"
         android:text="@string/roundsNo"
+        android:textColor="@android:color/black"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,6 +37,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:text="@string/player"
+        android:textColor="@android:color/black"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/roundStats" />
@@ -46,6 +49,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:text="@string/cpu"
+        android:textColor="@android:color/black"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/playerStats" />
@@ -56,6 +60,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="80dp"
         android:text="@string/winnerText"
+        android:textColor="@android:color/black"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,8 +71,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:shadowColor="#CD0303"
+        android:background="#ff6666"
+        android:textColor="@android:color/black"
         android:text="@string/homeButton"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
