--- a/app/src/main/res/layout/activity_gamemode.xml
+++ b/app/src/main/res/layout/activity_gamemode.xml
@@ -10,8 +10,12 @@
         android:id="@+id/gameModeStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:background="#70db70"
         android:enabled="false"
         android:text="@string/startbutton"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -22,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:text="@string/roundstitle"
+        android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,6 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="@string/gamemode"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -61,13 +68,18 @@
             android:layout_height="wrap_content"
             android:checked="false"
             android:onClick="radioButtonCheck"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"
             android:text="@string/rounds1" />
+
 
         <RadioButton
             android:id="@+id/r5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="radioButtonCheck"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"
             android:text="@string/rounds2" />
 
         <RadioButton
@@ -75,6 +87,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="radioButtonCheck"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"
             android:text="@string/rounds3" />
 
         <RadioButton
@@ -82,6 +96,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="radioButtonCheck"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"
             android:text="@string/rounds4" />
 
         <RadioButton
@@ -90,6 +106,8 @@
             android:layout_height="wrap_content"
             android:checked="false"
             android:onClick="radioButtonCheck"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"
             android:text="@string/rounds5" />
 
         <RadioButton
@@ -98,6 +116,8 @@
             android:layout_height="wrap_content"
             android:checked="false"
             android:onClick="radioButtonCheck"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"
             android:text="@string/rounds6" />
     </RadioGroup>
 </androidx.constraintlayout.widget.ConstraintLayout>
