--- a/app/src/main/res/layout/activity_gamescreen.xml
+++ b/app/src/main/res/layout/activity_gamescreen.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
         android:text="@string/roundsNo"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +25,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:text="@string/sax"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
+        android:background="#cccc00"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,6 +39,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:text="@string/sten"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
+        android:background="#00cc99"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/scissorButton"
@@ -45,6 +53,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:text="@string/påse"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
+        android:background="#ff3333"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,6 +66,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/player"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toTopOf="@+id/rockButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,6 +81,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/cpu"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toTopOf="@+id/paperButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -144,6 +159,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:text="@string/PlayerScore"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/player"
@@ -158,6 +175,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:text="@string/CpuScore"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
